css/power.css
/* these styles may slow down slower devices, so we're going to ban them unless the screen size is over a certain limit */
.frostedglass:before {
  content: "";
  position: absolute;
  background: inherit;
  z-index: -1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  box-shadow: inset 0 0 2000px rgba(0, 0, 0, 0.4);
  filter: blur(10px);
}
.frostedglass {
  box-shadow: 0 0 1rem 0 #000;
  border-radius: 10px;
  position: relative;
  z-index: 1;
  background: inherit;
  overflow: hidden;
  backdrop-filter: blur(10px);
}
.spaceBG {
  height: 100vh;
  min-height: 500px;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)),
    url(https://cdn.rungus.zone/rt/rtbg.webp);
}

